Completed further study

--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -44,11 +44,11 @@
         <form method="POST" action="/rsvp">
           <div class="form-group">
             <label for="field-name">Name</label>
-            <input id="field-name" class="form-control" type="text" name="name">
+            <input id="field-name" class="form-control" type="text" name="name" required>
           </div>
           <div class="form-group">
             <label for="field-email">Email</label>
-            <input id="field-email" class="form-control" type="text" name="email">
+            <input id="field-email" class="form-control" type="text" name="email" required>
           </div>
           <div class="form-group">
             <input type="submit" value="Oooh! I want to come!" class="btn btn-primary">
